# real_slam_ros1

./: README.md  carto_gmapping.sh  carto_test.sh  finish_slam_2d.sh  frames.gv  github-recovery-codes.txt  gmapping_save.sh  kill_all.sh  lidar_msg_convert.sh  readme.md  real_lidar_gmapping.sh  real_lidar_mapSave.sh  real_lidar_slam.sh  sim_carto_test.sh  sim_gazebo_rviz_start.sh  sim_gmaping.sh  sim_gmapping.sh  sim_mapsave.sh  sim_slam.sh
src/diff_pure_pursuit_local_planner/: CMakeLists.txt  package.xml
src/diff_pure_pursuit_local_planner/launch/: diff_local_planner.launch
src/diff_pure_pursuit_local_planner/src/: diff_pure_pursuit_node.cpp
src/livox_cloud_to_scan/: CMakeLists.txt  package.xml
src/livox_cloud_to_scan/launch/: cloud_to_scan.launch
src/livox_cloud_to_scan/src/: cloud_to_scan_node.cpp
src/read_laser_data/: CMakeLists.txt  package.xml  readme.md
src/read_laser_data/launch/: feature_detection_acl.launch  feature_detection_sim.launch  laser1_change_param.launch  laser2_change_param.launch  laser2_to_cloud.launch  laser_carto.launch  laser_scan_acl.launch  laser_scan_sim.launch  laser_to_cloud.launch
src/read_laser_data/rviz/: feature_acl.rviz  feature_sim.rviz
src/read_laser_data/src/: feature_detection_node.cpp  laser1_to_cloud_node.cpp  laser2_to_cloud_node.cpp  laser_carto_node.cpp  laser_scan_node.cpp  laser_static_pub_node.cpp
src/robot_communication/: CMakeLists.txt  README.md  package.xml
src/robot_communication/msg/: ESDFmap.msg  chassisControl.msg  goal.msg  localizationInfoBroadcast.msg  sensorData.msg
src/robot_costmap/: CMakeLists.txt  package.xml  readme.md
src/robot_costmap/Cost_Map/: CMakeLists.txt  main.cpp  readme.md
src/robot_costmap/Cost_Map/include/: cost_map.h
src/robot_costmap/Cost_Map/src/: cost_map.cpp
src/robot_costmap/cmake/: eigen.cmake
src/robot_costmap/include/map_deal/: edt_environment.h  global_map_deal.h  grid_map_2d.h  local_map_deal.h  map_deal.h  signed_distance_field_2d.h
src/robot_costmap/launch/: map_acl.launch  map_deal.launch  map_deal_real.launch  map_sim.launch
src/robot_costmap/maps/: 1v1test.pgm  1v1test.yaml  535.pgm  535.yaml  5all.yaml  5all2.pgm  GuoDao.pgm  GuoDao.yaml  ICRA.pgm  ICRA.yaml  NEW_M_5F.pgm  NEW_M_5F.yaml  carto_map.yaml  carto_mapb.pgm  carto_mapb.yaml  carto_mapc.pgm  carto_mape.pgm  carto_mape.yaml  carto_mapf.yaml  complex.pgm  complex.yaml  li999.pgm  li999.yaml  sim.pgm  table.pbstream  table.pgm  table.yaml  table2.pgm  table2.yaml
src/robot_costmap/src/map_deal/: edt_environment.cpp  global_map_deal.cpp  grid_map_2d.cpp  local_map_deal.cpp  map_deal.cpp  signed_distance_field_2d.cpp
src/robot_costmap/src/nodes/: map_deal_node.cpp
src/robot_gmapping/: CMakeLists.txt  package.xml  readme.md
src/robot_gmapping/cmake/: glog.cmake
src/robot_gmapping/include/gmapping/: gmapping.h
src/robot_gmapping/include/hector_mapping/: hector_mapping.h  hector_slam.h
src/robot_gmapping/include/occupancy_grid/: occupancy_grid.h
src/robot_gmapping/launch/: make_occupancy_grid_map.launch  ros_gmapping.launch  start_map_server.launch
src/robot_gmapping/map/: my_map_2025-12-23_16-44-58.pgm  my_map_2025-12-23_16-44-58.yaml
src/robot_gmapping/src/gmapping/: gmapping.cpp
src/robot_gmapping/src/hector_mapping/: hector_mapping.cpp
src/robot_gmapping/src/hector_slam/: hector_slam.cpp
src/robot_gmapping/src/occupancy_grid/: occupancy_grid.cpp
src/robot_locatization/: CMakeLists.txt  package.xml  readme.md  readme_carto_install.md
src/robot_locatization/cmake/: csm.cmake
src/robot_locatization/config/: plicp_odometry.yaml
src/robot_locatization/include/cartographer_local/: carto_locatization.h
src/robot_locatization/include/chassis_control/: chassisControl.h
src/robot_locatization/include/pl_icp/: plicp_odometry.h
src/robot_locatization/include/truth_pose/: truth_pose_odom.h
src/robot_locatization/include/vel_transform/: vel_transform.h
src/robot_locatization/launch/: actual_world.launch  carto_locatization.launch  chassis_control.launch  odom_calibra_pcl.launch  plicp_odometry_acl.launch  plicp_odometry_sim.launch  truth_odometry.launch
src/robot_locatization/rviz/: plicp_odometry_acl.rviz  plicp_odometry_sim.rviz  scan_match_icp.rviz  truth_odometry.rviz
src/robot_locatization/src/cartographer_local/: carto_locatization.cpp
src/robot_locatization/src/chassis_control/: chassisControl.cpp
src/robot_pid_local_planner/: CMakeLists.txt  LIDAR_CHANGE_DIAGNOSIS.md  README_pid_local_planner.md  YAW_OFFSET_GUIDE.md  package.xml  pid_local_planner_debug.md
src/robot_pid_local_planner/config/: omnidirectional_pid_param.yaml
src/robot_pid_local_planner/launch/: Omnidirectional_PID.launch  Omnidirectional_PID_real.launch  Omnidirectional_PID_sim.launch
src/robot_pid_local_planner/src/: omnidirectional_pid_local_planner_node.cpp
src/robot_usart/: CMakeLists.txt  package.xml  readme.md
src/robot_usart/include/easylog/: log.conf
src/robot_usart/launch/: usart_node.launch
src/robot_usart/src/: crc.cpp  usart_config.cpp  usart_node.cpp
src/scan_to_cloud/: CMakeLists.txt  package.xml
src/scan_to_cloud/launch/: scan_to_cloud.launch
src/scan_to_cloud/src/: scan_to_cloud_node.cpp
src/tri_steer_gazebo/: CMakeLists.txt  package.xml
src/tri_steer_gazebo/config/: controllers.yaml  pid.yaml
src/tri_steer_gazebo/launch/: carto_construct_map.launch  carto_odom_run.launch  carto_test.launch  real_slamRun.launch  sim_gazebo_rviz.launch
src/tri_steer_gazebo/map/: big_house.pgm  big_house.yaml  carto_map.pgm  carto_mapb.pgm  carto_mapb.yaml  carto_mapc.yaml  carto_mape.yaml  carto_mapf.pgm  carto_mapf.yaml  kexueguan205.pgm  kexueguan205.yaml  test_world01.pgm  test_world01.yaml
src/tri_steer_gazebo/src/: odom_tf_basefootprint.cpp
src/tri_steer_gazebo/worlds/: Realworld.dae  big_house.world  kexueguan205.world  test_world01.world  tri_steer.world
src/tri_steer_keyboard/: CMakeLists.txt  package.xml
src/tri_steer_keyboard/launch/: keyboard_tri_steer.launch
src/tri_steer_keyboard/scripts/: tri_steer_keyboard.py  tri_steer_kinematics.py
(+162 files in other folders)
