<?xml version="1.0"?>
<package format="2">
  <name>robot_pid_local_planner</name>
  <version>0.0.1</version>
  <description>Minimal PID-based local planner for omnidirectional base. Publishes /chassis_control and subscribes /opt_path and localization topics compatible with existing robot_navigation interface.</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>robot_communication</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robot_communication</exec_depend>


  <export>
  </export>
</package>
